[26502] change stream collection to toList()